Default 3 node APPC and SDNC
Change-Id: I422c6619ed41ea19736b0a77c37399d22e9ed30b
Issue-ID: INT-381
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/deployment/heat/onap-oom/env/gwu/onap.env
+++ b/deployment/heat/onap-oom/env/gwu/onap.env
@@ -35,3 +35,7 @@ parameters:
         openStackUserName: "${OS_USERNAME}"
         openStackKeyStoneUrl: "http://192.168.1.11:5000"
         openStackEncryptedPasswordHere: "${OS_PASSWORD_ENCRYPTED}"
+    appc:
+      replicaCount: 3
+    sdnc:
+      replicaCount: 3
