--- a/deployment/heat/onap-oom/env/windriver/Integration-SB-02.env
+++ b/deployment/heat/onap-oom/env/windriver/Integration-SB-02.env
@@ -37,7 +37,5 @@ parameters:
         openStackEncryptedPasswordHere: "${OS_PASSWORD_ENCRYPTED}"
     appc:
       replicaCount: 3
-    esr:
-      image: onap/aai/esr-server:latest
-      esr-gui:
-        image: onap/aai/esr-gui:latest
+    sdnc:
+      replicaCount: 3
