--- a/deployment/heat/onap-oom/env/tlab/EXTONAP_DEV.env
+++ b/deployment/heat/onap-oom/env/tlab/EXTONAP_DEV.env
@@ -35,3 +35,7 @@ parameters:
         openStackUserName: "${OS_USERNAME}"
         openStackKeyStoneUrl: "https://bdc1tlab01.research.att.com:5000"
         openStackEncryptedPasswordHere: "${OS_PASSWORD_ENCRYPTED}"
+    appc:
+      replicaCount: 3
+    sdnc:
+      replicaCount: 3
