--- a/test/mocks/pnfsimulator/pom.xml
+++ b/test/mocks/pnfsimulator/pom.xml
@@ -120,8 +120,9 @@
               <artifactId>docker-maven-plugin</artifactId>
               <version>1.0.0</version>
               <configuration>
-                  <imageName>${project.name}</imageName>
+                  <imageName>${onap.nexus.dockerregistry.daily}/onap/${project.artifactId}</imageName>
                   <imageTags>${docker.image.tag}</imageTags>
+                  <serverId>${onap.nexus.dockerregistry.daily}</serverId>
                   <baseImage>openjdk:8-jdk-alpine</baseImage>
                   <cmd>java -cp  ${dependency.directory.name}/*:${project.build.finalName}.jar ${simulator.main.class}</cmd>
                   <resources>
