Correction in pom.
Issue-ID: INT-458

Change-Id: I66d7a6458b38ee5394c6b4f9449223ed29502c3c
Signed-off-by: Pawel Kadlubanski <pawel.kadlubanski@nokia.com>

--- a/test/mocks/pnfsimulator/pom.xml
+++ b/test/mocks/pnfsimulator/pom.xml
@@ -18,6 +18,7 @@
         <docker.image.tag>latest</docker.image.tag>
         <dependency.directory.name>libs</dependency.directory.name>
         <dependency.directory.location>${project.build.directory}/${dependency.directory.name}</dependency.directory.location>
+        <onap.nexus.dockerregistry.daily>nexus3.onap.org:10003</onap.nexus.dockerregistry.daily>
     </properties>
 
   <dependencies>
@@ -120,8 +121,9 @@
               <artifactId>docker-maven-plugin</artifactId>
               <version>1.0.0</version>
               <configuration>
-                  <imageName>${project.name}</imageName>
+                  <imageName>${onap.nexus.dockerregistry.daily}/onap/${project.artifactId}</imageName>
                   <imageTags>${docker.image.tag}</imageTags>
+                  <serverId>${onap.nexus.dockerregistry.daily}</serverId>
                   <baseImage>openjdk:8-jdk-alpine</baseImage>
                   <cmd>java -cp  ${dependency.directory.name}/*:${project.build.finalName}.jar ${simulator.main.class}</cmd>
                   <resources>
